--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2034,3 +2034,28 @@ main {
 .btn-promover:hover {
     background-color: #0b7dda;
 }
+
+.moderador-post-acoes {
+    display: flex;
+    justify-content: flex-end;
+    padding: 5px 10px;
+    margin-top: -10px;
+}
+
+.btn-excluir-postModerador {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+}
+
+.btn-excluir-postModerador:hover {
+    opacity: 1;
+}
+
+.btn-excluir-postModerador img {
+    width: 20px;
+    height: 20px;
+}
